# grpc_toolchain_setup

./: .gitignore
test_grpc_clone_toolchain/: CMakePresets.json  build_grpc_static_linux.sh  build_grpc_static_win.bat
test_grpc_clone_toolchain/my_app/: CMakeLists.txt  CMakePresets.json
test_grpc_vcpkg_toolchain/: setup_vcpkg_grpc_static_win.bat
test_grpc_vcpkg_toolchain/my_app_vcpkg/: CMakeLists.txt  CMakeSettings.json  main.cpp
test_grpc_vcpkg_toolchain/my_app_vcpkg/proto/: CMakeLists.txt  hello.proto
